overflow bug testing

--- a/app/globals.css
+++ b/app/globals.css
@@ -18,14 +18,13 @@
 
 .container{
   display: flex;
-  overflow:auto;
+  overflow-x:auto;
   scroll-snap-type: x mandatory;
   scroll-snap-align: start;
   white-space: nowrap;
-  max-height: 100vh;
   width: 100vw;
   height: 100%;
-  min-width: 100vw;
+  /* min-width: 100vw; */
   /* height: 100vh; */
 }
 
@@ -39,7 +38,6 @@
   /* min-height: 100vh; */
   height: 100%;
   max-height: 100vh;
-  overflow-y: hidden;
   text-overflow: clip;
   box-sizing: border-box;
   scroll-snap-align: start;
@@ -63,7 +61,7 @@ body {
     )
     rgb(var(--background-start-rgb)); */
     background-color: black;
-    overflow: hidden;
+    /* overflow: hidden; */
     color: white;
 }
 
